# texdocx

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
examples/: sample.txt
src/: cli.rs  docx.rs  error.rs  lib.rs  main.rs  renderer.rs  server.rs  tokenizer.rs
