[package]
name = "txdx"
version = "0.1.0"
edition = "2021"
description = "Convert mixed text/LaTeX math documents to DOCX with inline formula images"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tempfile = "3"
sha2 = "0.10"
image = "0.25"
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
